--- a/app/src/main/res/layout/item_event_list_layout.xml
+++ b/app/src/main/res/layout/item_event_list_layout.xml
@@ -11,6 +11,7 @@
         android:layout_width="@dimen/dimen_size_50"
         android:layout_height="@dimen/dimen_size_50"
         android:src="@drawable/avatar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,24 +19,34 @@
         android:id="@+id/txt_event_title"
         style="@style/BasicText"
         android:layout_marginStart="@dimen/dimen_size_10"
-        android:layout_marginTop="@dimen/dimen_size_10"
         android:includeFontPadding="false"
         android:padding="0dp"
         android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/img_event"
-        app:layout_constraintTop_toTopOf="@+id/img_event"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Catch up with Janet" />
 
     <TextView
         android:id="@+id/txt_event_time"
         style="@style/BasicText"
         android:layout_marginStart="@dimen/dimen_size_10"
+        android:layout_marginTop="@dimen/dimen_size_5"
         android:includeFontPadding="false"
-        android:padding="0dp"
         android:textSize="@dimen/text_size_13"
-        app:layout_constraintBottom_toBottomOf="@+id/img_event"
         app:layout_constraintStart_toEndOf="@+id/img_event"
         app:layout_constraintTop_toBottomOf="@+id/txt_event_title"
         tools:text="8 - 10 am" />
+
+    <TextView
+        android:id="@+id/txt_event_goal"
+        style="@style/BasicText"
+        android:layout_marginStart="@dimen/dimen_size_10"
+        android:includeFontPadding="false"
+        android:textColor="@color/greyText"
+        android:textSize="@dimen/text_size_13"
+        android:textStyle="italic"
+        app:layout_constraintStart_toEndOf="@+id/img_event"
+        app:layout_constraintTop_toBottomOf="@+id/txt_event_time"
+        tools:text="Associated with Health, Walk 2000 steps" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
