--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent"
-    tools:context=".screens.main.HomeActivity">
+    tools:context=".screens.main.MainActivity">
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/home_drawer_layout"
