--- a/app/src/main/res/layout/item_milestone_list_layout.xml
+++ b/app/src/main/res/layout/item_milestone_list_layout.xml
@@ -9,13 +9,11 @@
     <TextView
         android:id="@+id/txt_milestone_title"
         style="@style/BasicText"
-        android:layout_marginStart="@dimen/dimen_size_10"
-        android:layout_marginTop="@dimen/dimen_size_10"
         android:includeFontPadding="false"
         android:padding="0dp"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/img_event"
-        app:layout_constraintTop_toTopOf="@+id/img_event"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Catch up with Janet" />
 
     <TextView
